Added reference link for embedding layers in keras

--- a/Building_and_exploring_transformer_model_for_language_understanding.ipynb
+++ b/Building_and_exploring_transformer_model_for_language_understanding.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMFzPawBsTxYLEHCsZeSzM9",
+      "authorship_tag": "ABX9TyPKad2uVgEJMwnTe6Ep7CKd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4552,7 +4552,8 @@
         "1. https://www.tensorflow.org/tutorials/text/transformer#top_of_page\n",
         "2. https://gombru.github.io/2018/05/23/cross_entropy_loss/\n",
         "3. https://machinelearningmastery.com/cross-entropy-for-machine-learning/\n",
-        "4. [NLP and word embeddings - Embedding Matrix (Andrew Ng)](https://youtu.be/VkjSaOZSZVs)\n"
+        "4. NLP and word embeddings: Embedding Matrix by Andrew Ng - https://youtu.be/VkjSaOZSZVs\n",
+        "5. Embedding Layers in Keras by Jeff Heaton - https://youtu.be/OuNH5kT-aD0\n"
       ]
     }
   ]
