Update comment for look ahead masking for decoder

--- a/Building_and_exploring_transformer_model_for_language_understanding.ipynb
+++ b/Building_and_exploring_transformer_model_for_language_understanding.ipynb
@@ -3190,7 +3190,7 @@
         "  return seq[:, tf.newaxis, tf.newaxis, :]      # (batch_size, 1, 1, seq_len)\n",
         "\n",
         "def create_look_ahead_mask(size):\n",
-        "  mask = 1 - tf.linalg.band_part(tf.ones((size, size)), -1, 0)\n",
+        "  mask = 1 - tf.linalg.band_part(tf.ones((size, size)), -1, 0)   # Set diagonal and all subdiagonals to zero, rest to 1 \n",
         "  return mask                                  # (seq_len, seq_len)"
       ],
       "execution_count": null,
