--- a/Building_and_exploring_transformer_model_for_language_understanding.ipynb
+++ b/Building_and_exploring_transformer_model_for_language_understanding.ipynb
@@ -3776,13 +3776,13 @@
         "    x - query received from decoder from target sequence\n",
         "    enc_output shape = (batch_size, input_seq_len, d_model)\n",
         "    \"\"\"\n",
-        "    attn1, attn_wts_block1 = self.masked_mha(x, x, x, lookahead_mask)              # (batch_size, target_seq_len, d_model)\n",
-        "    attn1 = self.dropout1(attn1, training=training)\n",
-        "    out1 = self.layernorm1(x + attn1)\n",
+        "    attn_output1, attn_wts_block1 = self.masked_mha(x, x, x, lookahead_mask)              # (batch_size, target_seq_len, d_model)\n",
+        "    attn_output1 = self.dropout1(attn_output1, training=training)\n",
+        "    out1 = self.layernorm1(x + attn_output1)\n",
         "\n",
-        "    attn2, attn_wts_block2 = self.mha(enc_output, enc_output, out1, padding_mask)  # (batch_size, target_seq_len, d_model)\n",
-        "    attn2 = self.dropout2(attn2, training=training)\n",
-        "    out2 = self.layernorm2(out1 + attn2)                                           # (batch_size, target_seq_len, d_model)\n",
+        "    attn_output2, attn_wts_block2 = self.mha(enc_output, enc_output, out1, padding_mask)  # (batch_size, target_seq_len, d_model)\n",
+        "    attn_output2 = self.dropout2(attn_output2, training=training)\n",
+        "    out2 = self.layernorm2(out1 + attn_output2)                                           # (batch_size, target_seq_len, d_model)\n",
         "\n",
         "    ff_outout = self.ffn(out2)          # (batch_size, target_seq_len, d_model)\n",
         "    ff_output = self.dropout3(ff_outout, training=training)\n",
