Updated multi head attention mechanism intuition for transformers architecture

--- a/Building_and_exploring_transformer_model_for_language_understanding.ipynb
+++ b/Building_and_exploring_transformer_model_for_language_understanding.ipynb
@@ -3527,9 +3527,11 @@
         "id": "9fywajRr14k_"
       },
       "source": [
-        "Since multihead attention involves multiple heads, each working on reduced dimension of vector. This means the scaled dot product will be involved for each word in a sequence of length seq_len_q or seq_len_k or seq_len_v with each word represented by reduced dimensions and will be worked upon by 8 heads for each word / location in the sequence.\n",
+        "Since multihead attention involves multiple heads, each head works on a reduced dimension of vector. This means that the scaled dot product will be involved for each word in a sequence of length seq_len_q or seq_len_k or seq_len_v with each word represented by reduced dimensions and will be worked upon by 8 heads for each word/location in the sequence.\n",
         "\n",
-        "In the below example, at each location in the sequence, y, the MultiHeadAttention runs all 8 attention heads across all other locations in the sequence, returning a new vector of the same length at each location."
+        "In the below example, at each location in the sequence, y, the MultiHeadAttention runs all 8 attention heads across all other locations in the sequence, returning a new vector of the same length at each location.",
+        "\n",
+        "Intuition behind multiple heads - Each head learns a different aspect of the input sequence. This way multiple heads learn different sets of attention weights in parallel, independent of each other. These aspects also can't be dictated ahead of time and are rather randomly initialized before training and are learnt during training."
       ]
     },
     {
