--- a/Building_and_exploring_transformer_model_for_language_understanding.ipynb
+++ b/Building_and_exploring_transformer_model_for_language_understanding.ipynb
@@ -365,20 +365,85 @@
       },
       "source": [
         "def get_angles(pos, i, d_model):\n",
+        "  \"\"\"\n",
+        "  Compute angle rates for positional encoding using sinusoidal functions.\n",
+        "\n",
+        "  This function calculates the angle rates that determine the frequency of\n",
+        "  sine and cosine waves used in positional encoding. The angle rates decrease\n",
+        "  exponentially across the model dimension, creating different frequencies\n",
+        "  for different embedding dimensions.\n",
+        "\n",
+        "  Args:\n",
+        "      pos (np.ndarray): Position indices in the sequence. Shape: (seq_len, 1)\n",
+        "      i (np.ndarray): Dimension indices in the model. Shape: (1, d_model)\n",
+        "      d_model (int): The dimensionality of the model embeddings\n",
+        "\n",
+        "  Returns:\n",
+        "      np.ndarray: Angle values for each position-dimension pair.\n",
+        "                  Shape: (seq_len, d_model)\n",
+        "\n",
+        "  Mathematical Formula:\n",
+        "      angle_rate = 1 / (10000^(2*(i//2)/d_model))\n",
+        "      angle = pos * angle_rate\n",
+        "\n",
+        "  Significance:\n",
+        "      - Creates exponentially decreasing frequencies from 1 to 1/10000 rads/step\n",
+        "      - Lower dimensions get higher frequencies (faster oscillation)\n",
+        "      - Higher dimensions get lower frequencies (slower oscillation)\n",
+        "      - This allows the model to learn both local and global positional patterns\n",
+        "  \"\"\"\n",
         "  angle_rates = 1 / np.power(10000, (2 * (i//2)) / np.float32(d_model))\n",
         "  return pos * angle_rates\n",
         "\n",
         "def positional_encoding(position, d_model):\n",
+        "  \"\"\"\n",
+        "  Generate sinusoidal positional encodings for transformer models.\n",
+        "\n",
+        "  Creates positional encodings using sine and cosine functions with different\n",
+        "  frequencies across dimensions. This allows the model to learn relative\n",
+        "  positions and extrapolate to longer sequences than seen during training.\n",
+        "\n",
+        "  Args:\n",
+        "      position (int): Maximum sequence length to generate encodings for\n",
+        "      d_model (int): Dimensionality of the model embeddings (must be even)\n",
+        "\n",
+        "  Returns:\n",
+        "      tf.Tensor: Positional encoding tensor of shape (1, position, d_model)\n",
+        "                Ready to be added to input embeddings\n",
+        "\n",
+        "  Algorithm:\n",
+        "      1. Generate angle values for all position-dimension combinations\n",
+        "      2. Apply sine to even dimension indices (0, 2, 4, ...)\n",
+        "      3. Apply cosine to odd dimension indices (1, 3, 5, ...)\n",
+        "      4. Add batch dimension and convert to TensorFlow tensor\n",
+        "\n",
+        "  Significance:\n",
+        "      - Provides unique positional information for each sequence position\n",
+        "      - Sine/cosine pairs create rotational patterns that preserve relative distances\n",
+        "      - Different frequencies allow encoding of both fine-grained and coarse positional info\n",
+        "      - Deterministic encoding ensures consistent position representation across batches\n",
+        "      - Enables the model to understand sequence order without explicit position tokens\n",
+        "\n",
+        "  Mathematical Properties:\n",
+        "      - PE(pos, 2i) = sin(pos / 10000^(2i/d_model))\n",
+        "      - PE(pos, 2i+1) = cos(pos / 10000^(2i/d_model))\n",
+        "      - Any offset in position can be represented as a linear function of PE(pos)\n",
+        "      - The encoding is bounded between -1 and 1, preventing gradient explosion\n",
+        "  \"\"\"\n",
+        "  # Generate angle values for all position-dimension combinations\n",
         "  angle_rads = get_angles(np.arange(position)[:, np.newaxis],\n",
         "                          np.arange(d_model)[np.newaxis, :],\n",
         "                          d_model)\n",
         "\n",
-        "  # apply sine to even indices in the array; 2i\n",
+        "  # Apply sine to even indices in the array; 2i (dimensions 0, 2, 4, ...)\n",
+        "  # This creates the first component of each sine-cosine pair\n",
         "  angle_rads[:, 0::2] = np.sin(angle_rads[:, 0::2])\n",
         "\n",
-        "  # apply cosine to odd indices in the array; 2i+1\n",
+        "  # Apply cosine to odd indices in the array;2i+1 (dimensions 1, 3, 5, ...)\n",
+        "  # This creates the second component of each sine-cosine pair\n",
         "  angle_rads[:, 1::2] = np.cos(angle_rads[:, 1::2])\n",
         "\n",
+        "  # Add batch dimension to make it broadcastable with input embeddings\n",
         "  pos_encoding = angle_rads[np.newaxis, ...]\n",
         "\n",
         "  return tf.cast(pos_encoding, dtype=tf.float32)"
