--- a/Building_and_exploring_transformer_model_for_language_understanding.ipynb
+++ b/Building_and_exploring_transformer_model_for_language_understanding.ipynb
@@ -400,7 +400,9 @@
         "  Generate sinusoidal positional encodings for transformer models.\n",
         "\n",
         "  Creates positional encodings using sine and cosine functions with different\n",
-        "  frequencies across dimensions. This allows the model to learn relative\n",
+        "  frequencies across dimensions. Each dimension of the positional encoding\n",
+        "  corresponds to a sinusoid.\n",
+        "  This allows the model to learn relative\n",
         "  positions and extrapolate to longer sequences than seen during training.\n",
         "\n",
         "  Args:\n",
@@ -453,6 +455,19 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "angle_rads = get_angles(np.arange(5)[:, np.newaxis], np.arange(5)[np.newaxis, :], 5)\n",
+        "print(angle_rads)\n",
+        "print(angle_rads.shape)"
+      ],
+      "metadata": {
+        "id": "1vMmpM0EY230"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "E26jRR0nYs6D"
       },
@@ -495,6 +510,17 @@
       },
       "source": [
         "def create_padding_mask(seq):\n",
+        "  \"\"\"\n",
+        "  Creates a padding masky returning a 1 wherever an input is 0 , to ensure the\n",
+        "  model doesn't treat padding as input.\n",
+        "\n",
+        "  Args:\n",
+        "      seq (int): sequence length\n",
+        "\n",
+        "  Returns:\n",
+        "      tf.Tensor: Padding mask tensor of shape (batch_size, 1, 1, seq_len)\n",
+        "  \"\"\"\n",
+        "\n",
         "  seq = tf.cast(tf.math.equal(seq, 0), tf.float32)\n",
         "\n",
         "  # add extra dimensions to add the padding\n",
@@ -502,7 +528,17 @@
         "  return seq[:, tf.newaxis, tf.newaxis, :]      # (batch_size, 1, 1, seq_len)\n",
         "\n",
         "def create_look_ahead_mask(size):\n",
-        "  mask = 1 - tf.linalg.band_part(tf.ones((size, size)), -1, 0)   # Set diagonal and all subdiagonals to zero, rest to 1\n",
+        "  \"\"\"\n",
+        "  Creates a look ahead mask by setting diagonal and all subdiagonals to zero,\n",
+        "  rest to 1.\n",
+        "\n",
+        "  Args:\n",
+        "      size (int): sequence length\n",
+        "\n",
+        "  Returns:\n",
+        "      tf.Tensor: Look ahead mask tensor of shape (seq_len, seq_len)\n",
+        "  \"\"\"\n",
+        "  mask = 1 - tf.linalg.band_part(tf.ones((size, size)), -1, 0)\n",
         "  return mask                                  # (seq_len, seq_len)"
       ],
       "execution_count": null,
