Added more references for attention mechanism

--- a/Building_and_exploring_transformer_model_for_language_understanding.ipynb
+++ b/Building_and_exploring_transformer_model_for_language_understanding.ipynb
@@ -1653,13 +1653,17 @@
         "id": "G46d7fDksuLk"
       },
       "source": [
-        "#### References\n",
+        "#### References -\n",
         "\n",
         "1. https://www.tensorflow.org/tutorials/text/transformer#top_of_page\n",
         "2. https://gombru.github.io/2018/05/23/cross_entropy_loss/\n",
         "3. https://machinelearningmastery.com/cross-entropy-for-machine-learning/\n",
         "4. NLP and word embeddings: Embedding Matrix by Andrew Ng - https://youtu.be/VkjSaOZSZVs\n",
-        "5. Embedding Layers in Keras by Jeff Heaton - https://youtu.be/OuNH5kT-aD0\n"
+        "5. Embedding Layers in Keras by Jeff Heaton - https://youtu.be/OuNH5kT-aD0\n",
+        "\n",
+        "More references to understanding the concept of attention mechanism in pytorch with different perspective -\n",
+        "1. [Understanding and Coding the Self-Attention Mechanism of Large Language Models From Scratch - 2023](https://sebastianraschka.com/blog/2023/self-attention-from-scratch.html)\n",
+        "2. [A simple self-attention mechanism - Live Coding w/ Sebastian Raschka - 2025](https://www.youtube.com/watch?v=2rluVS_ap9M)\n"
       ]
     }
   ]
