--- a/Building_and_exploring_transformer_model_for_language_understanding.ipynb
+++ b/Building_and_exploring_transformer_model_for_language_understanding.ipynb
@@ -1012,11 +1012,13 @@
         "    x - query received from decoder from target sequence\n",
         "    enc_output shape = (batch_size, input_seq_len, d_model)\n",
         "    \"\"\"\n",
+        "    # Causal self-attention\n",
         "    attn_output1, attn_wts_block1 = self.masked_mha(x, x, x, lookahead_mask)              # (batch_size, target_seq_len, d_model)\n",
         "    attn_output1 = self.dropout1(attn_output1, training=training)\n",
         "    out1 = self.layernorm1(x + attn_output1)\n",
         "\n",
-        "    attn_output2, attn_wts_block2 = self.mha(enc_output, enc_output, out1, padding_mask)  # (batch_size, target_seq_len, d_model)\n",
+        "    # cross-attention\n",
+        "    attn_output2, attn_wts_block2 = self.mha(v=enc_output, k=enc_output, q=out1, padding_mask)  # (batch_size, target_seq_len, d_model)\n",
         "    attn_output2 = self.dropout2(attn_output2, training=training)\n",
         "    out2 = self.layernorm2(out1 + attn_output2)                                           # (batch_size, target_seq_len, d_model)\n",
         "\n",
