--- a/Building_and_exploring_transformer_model_for_language_understanding.ipynb
+++ b/Building_and_exploring_transformer_model_for_language_understanding.ipynb
@@ -562,6 +562,8 @@
         "\n",
         "The mask is multiplied with -1e9 (close to negative infinity). This is done because the mask is summed with the scaled matrix multiplication of Q and K and is applied immediately before a softmax. The goal is to zero out these cells, and large negative inputs to softmax are near zero in the output.\n",
         "\n",
+        "**Why dot product of vectors?** - Because dot product signifies computing similarity between the vectors\n",
+        "\n",
         "There are 3 types of Attention -\n",
         "1. Encoder/Decoder\n",
         "2. Causal\n",
